# MicroADV

./: .gitignore  .gitmodules  MicroADV.code-workspace  README.md  install_uiflow_lib.sh  main.py  pymakr.conf  pyproject.toml  requirements.txt
src/: main.py
src/app/: main.py
src/app/gui/: pages.py  ui_elements.py
src/app/hw_tools/: keyboard.py
src/point_tracker/: .gitignore  .micropythonrc  README.md  main.mpy  main.py  pymakr.conf  pyproject.toml
src/point_tracker/app/: main.py  mqtt_tools.py  network.py  states.py
src/point_tracker/app/hw_tools/: keyboard.py  sensors.py
src/point_tracker_server/: main.py  pyproject.toml
tests/: point_tracker.py  test-audio.py  uiflow_elements.py
