[project]
name = "point_tracker"
version = "0.1.0"
description = "Personal playground to get familiar with Micropython/UIFlow on M5Stack Cardputer ADV"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adafruit-ampy>=1.1.0",
    "esptool>=5.1.0",
    "mpremote>=1.26.1",
    "pyright>=1.1.407",
    "rshell>=0.0.36",
    "ty>=0.0.1a25"]



