[project]
name = "point_tracker"
version = "0.1.0"
description = "Personal playground to get familiar with Micropython/UIFlow on M5Stack Cardputer ADV"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "micropy-cli>=4.2.2",
    "requests>=2.31.0",
    "setuptools<=81",
]



